Update LinkedListExample.java