@@ -5,7 +5,7 @@ import java.util.LinkedList;
 public class LinkedListExample {
     public static void main(String[] args) {
 
-        LinkedList<String> list = new LinkedList<String>();
+        LinkedList<String> list = new LinkedList<>();
 
         // Add elements
         list.add("Apple");
@@ -20,16 +20,17 @@ public class LinkedListExample {
         list.addLast("Orange");
 
         // Read elements
-        System.out.println("First element: " + list.getFirst());
+        System.out.println("First element: " + list.get(0));
         System.out.println("Last element: " + list.getLast());
         
-        System.out.println("Updated LinkedList1: "+list);
+        System.out.println("Updated LinkedList 1: "+list);
 
         // Remove elements
-        list.removeFirst();
+        list.remove(0);
+        list.remove("Banana");
         list.removeLast();
 
         // Updated LinkedList
-        System.out.println("Updated LinkedList2: " + list);
+        System.out.println("Updated LinkedList 2: " + list);
     }
 }
